# chat-app

./: .gitignore
server/: .dockerignore  Dockerfile  manage.py  pyproject.toml
server/auth/: admin.py  apps.py  urls.py
server/authentication/: admin.py  apps.py  urls.py
server/authentication/apis/: __init__.py  cookie_logout.py  cookie_logout_api.py  cookie_token_obtain_pair.py  cookie_token_obtain_pair_api.py  cookie_token_refresh.py  cookie_token_refresh_api.py
server/authentication/utils/: __init__.py  cookie_jwt_authentication.py
server/chat/: admin.py  apps.py  consumers.py  routing.py  urls.py
server/chat/apis/: __init__.py  conversation_create.py  inbox.py  message_list.py
server/chat/consumers/: __init__.py  chat.py
server/chat/middlewares/: __init__.py  jwt_auth_cookie.py
server/chat/migrations/: 0001_initial.py  0002_alter_conversation_name.py
server/chat/models/: __init__.py  conversation.py  message.py  participant.py
server/chat/serializers/: __init__.py  conversation_create.py  conversation_list.py  display_info.py  message.py  simple_user.py
server/core/: asgi.py  settings.py  urls.py  wsgi.py
server/core/exceptions/: __init__.py  application_error.py
server/core/utils/: __init__.py  exception_handler.py  integrity_errors_mapper.py
server/users/: admin.py  apps.py  urls.py
server/users/apis/: __init__.py  get_current_user_info_api.py  my_profile_api.py  register_user_api.py  update_current_user_api.py  user_profile.py  user_registration.py  user_search.py
server/users/exceptions/: __init__.py  user_already_exists.py
server/users/managers/: __init__.py  custom_user_manager.py
server/users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_bio.py  0004_user_status_emoji.py  (+1 more)
(+117 files in other folders)
